# liballo

./: .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: pr-check.yml
benchmarks/: bench_allocators.c  meson.build
include/: allo.h  allo_assert.h  allo_mem.h  asan.h
scripts/: bench.sh  coverage.sh  fuzz.sh
src/: allo_arena.c  allo_buddy.c  allo_buffer.c  allo_gen.c  allo_libc.c  allo_mem.c  allo_page.c  allo_page_posix.h  allo_page_x86.h  allo_pool.c  allo_utils.c  meson.build
subprojects/: .gitignore  ubench.wrap
subprojects/packagefiles/ubench/: meson.build  ubench_iterations.patch
tests/: fuzz_allocator.c  meson.build  nolibc_start.c  test_arena.c  test_buddy.c  test_buffer.c  test_c.c  test_calloc.c  test_common.c  test_fallback.c  test_gen.c  test_harness.h  test_mtx.c  test_page.c  test_pool.c  test_realloc.c
tests/fuzz_corpus/: id:000001,time:0,execs:0,orig:seed_c  id:000003,time:0,execs:0,orig:seed_pool  id:000005,src:000000,time:2,execs:40,op:(null),pos:0,+cov  id:000027,src:000000,time:33,execs:911,op:int16,pos:0,val:+256  id:000031,src:000000,time:36,execs:986,op:int32,pos:0,val:-128,+cov  id:000034,src:000000,time:41,execs:1109,op:ext_UI,pos:0,+cov  id:000050,src:000000,time:50,execs:1313,op:havoc,rep:1  id:000065,src:000000,time:63,execs:1598,op:havoc,rep:1,+cov  id:000066,src:000000,time:67,execs:1616,op:havoc,rep:2,+cov  id:000073,src:000000,time:76,execs:1811,op:havoc,rep:2  id:000080,src:000000,time:90,execs:1980,op:havoc,rep:2  id:000081,src:000000,time:92,execs:2006,op:havoc,rep:2  id:000082,src:000000,time:93,execs:2042,op:havoc,rep:2  id:000089,src:000000,time:111,execs:2306,op:havoc,rep:2,+cov  id:000091,src:000000,time:115,execs:2413,op:havoc,rep:2  id:000093,src:000000,time:128,execs:2592,op:havoc,rep:2  id:000102,src:000000,time:173,execs:2906,op:havoc,rep:2  id:000104,src:000000,time:179,execs:3072,op:havoc,rep:2  id:000109,src:000000,time:202,execs:3555,op:havoc,rep:2  id:000110,src:000000,time:203,execs:3577,op:havoc,rep:2,+cov  id:000114,src:000000,time:213,execs:3769,op:havoc,rep:2  id:000115,src:000000,time:217,execs:3852,op:havoc,rep:2  id:000119,src:000000,time:228,execs:3971,op:havoc,rep:2  id:000125,src:000000,time:270,execs:4664,op:havoc,rep:2  id:000126,src:000000,time:276,execs:4707,op:havoc,rep:2  id:000128,src:000000,time:292,execs:5079,op:havoc,rep:2  id:000132,src:000000,time:316,execs:5569,op:havoc,rep:2  id:000136,src:000000,time:342,execs:6148,op:havoc,rep:2  id:000137,src:000000,time:348,execs:6277,op:havoc,rep:2  id:000146,src:000000,time:435,execs:8044,op:havoc,rep:1,+cov  id:000153,src:000000,time:595,execs:11346,op:havoc,rep:2  id:000162,src:000000,time:817,execs:16352,op:havoc,rep:2  id:000166,src:000000,time:900,execs:17990,op:havoc,rep:2  id:000167,src:000000,time:1007,execs:20448,op:havoc,rep:2  id:000168,src:000000,time:1035,execs:21132,op:havoc,rep:2  id:000169,src:000000,time:1086,execs:22427,op:havoc,rep:2  id:000171,src:000000,time:1174,execs:24189,op:havoc,rep:2  id:000172,src:000000,time:1190,execs:24490,op:havoc,rep:2  id:000174,src:000000,time:1342,execs:27896,op:havoc,rep:1  id:000176,src:000000,time:1422,execs:29410,op:havoc,rep:2,+cov  (+70 more)
